# TOPO_Assessment

./: README.md
Topo_Assessments/: TOPO_mcp.py  main.py  pyproject.toml  test_main.py  topoQ1.py  unified_Data.json
Topo_Assessments/MCP/: TOPO_mcp.py
Topo_Assessments/website_Django/: db.sqlite3  manage.py
Topo_Assessments/website_Django/dashboard/: admin.py  models.py  serializers.py  unified_Data.json  urls.py  utils.py  views.py
Topo_Assessments/website_Django/dashboard/fixtures/: unified_Data.json
Topo_Assessments/website_Django/dashboard/migrations/: 0001_initial.py  0002_a_performance_comapany_id_client_comapany_id_and_more.py  0003_remove_a_performance_quarters_and_more.py  0004_alter_industry_company_list_and_more.py  0005_remove_industry_company_list_and_more.py  0006_industry_company_list_and_more.py  0007_remove_industry_quarters_id_industry_quarters_pk.py  0008_alter_company_company_revenue_alter_employee_id.py  0009_employee_employee_id_alter_employee_id.py  0010_remove_employee_comapany_id_remove_employee_id_and_more.py  0011_employee_company.py  0012_rename_comapany_id_client_comapany_and_more.py  0013_remove_client_comapany.py  0014_rename_comapany_id_a_performance_company_and_more.py  0015_rename_company_revenue_company_company_revenue_and_more.py  0016_rename_top_location_a_performance_top_location_and_more.py  0017_client_company.py  0018_rename_avg_duration_min_q_performance_avg_duration_min_and_more.py  0019_alter_q_performance_profit_margin.py  (+9 more)
Topo_Assessments/website_Django/website_Django/: asgi.py  settings.py  urls.py  wsgi.py
(+2 files in other folders)
